--- a/test/integration/targets/macos_pref/tasks/test-write.yml
+++ b/test/integration/targets/macos_pref/tasks/test-write.yml
@@ -7,33 +7,33 @@
 # TESTS: value not present
 #
 
-- name: VNP_01 - add new array index (create key)
+- name: Write - VNP_01 - add new array index (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_01
     value:
       - index0
 
-- name: VNP_01 - add new array index (add index)
+- name: Write - VNP_01 - add new array index (add index)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_01:1
     value: index1
 
-- name: VNP_01 - add new array index (add index idempotence)
+- name: Write - VNP_01 - add new array index (add index idempotence)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_01:1
     value: index1
   register: VNP_01_1
 
-- name: VNP_01 - add new array index (read key)
+- name: Write - VNP_01 - add new array index (read key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_01
   register: VNP_01_2
 
-- name: VNP_01 - add new array index (assert)
+- name: Write - VNP_01 - add new array index (assert)
   assert:
     that:
       - "not VNP_01_1.changed"
@@ -41,22 +41,22 @@
 
 #-------------
 
-- name: VNP_02 - add new array index, out of range (create key)
+- name: Write - VNP_02 - add new array index, out of range (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_02
     value:
       - index0
 
-- name: VNP_02 - add new array index, out of range (add index)
+- name: Write - VNP_02 - add new array index, out of range (add index)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_02:2
     value: index1
   register: VNP_02
   ignore_errors: yes
 
-- name: VNP_02 - add new array index, out of range (assert)
+- name: Write - VNP_02 - add new array index, out of range (assert)
   assert:
     that:
       - "VNP_02.failed"
@@ -64,26 +64,26 @@
 
 #-------------
 
-- name: VNP_03 - create key path (create key)
+- name: Write - VNP_03 - create key path (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_03:array:0:array:0:var
     value: value
 
-- name: VNP_03 - create key path (create key idempotence)
+- name: Write - VNP_03 - create key path (create key idempotence)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_03:array:0:array:0:var
     value: value
   register: VNP_03_1
 
-- name: VNP_03 - create key path (read key)
+- name: Write - VNP_03 - create key path (read key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_03
   register: VNP_03_2
 
-- name: VNP_03 - create key path (assert)
+- name: Write - VNP_03 - create key path (assert)
   assert:
     that:
       - "not VNP_03_1.changed"
@@ -91,15 +91,15 @@
 
 #-------------
 
-- name: VNP_04 - create key path, out of range (create key)
+- name: Write - VNP_04 - create key path, out of range (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VNP_04:array:1:array:0:var
     value: value
   ignore_errors: yes
   register: VNP_04
 
-- name: VNP_04 - create key path, out of range (assert)
+- name: Write - VNP_04 - create key path, out of range (assert)
   assert:
     that:
       - "VNP_04.failed"
@@ -109,21 +109,21 @@
 # TESTS: value present
 #
 
-- name: VP_01 - type mismatch (create key)
+- name: Write - VP_01 - type mismatch (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VP_01
     value: base
 
-- name: VP_01 - type mismatch (create base)
+- name: Write - VP_01 - type mismatch (create base)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VP_01
     value: True
   register: VP_01
   ignore_errors: yes
 
-- name: VP_01 - type mismatch (assert)
+- name: Write - VP_01 - type mismatch (assert)
   assert:
     that:
       - "VP_01.failed"
@@ -133,34 +133,34 @@
 # TESTS: value present, state=merge
 #
 
-- name: VPM_01 - merge array into array (create key)
+- name: Write - VPM_01 - merge array into array (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_01
     value: ['val1', 'val2']
 
-- name: VPM_01 - merge array into array (merge key)
+- name: Write - VPM_01 - merge array into array (merge key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_01
     state: merge
     value: ['val2', 'val3']
 
-- name: VPM_01 - merge array into array (merge key idempotence)
+- name: Write - VPM_01 - merge array into array (merge key idempotence)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_01
     state: merge
     value: ['val2', 'val3']
   register: VPM_01_1
 
-- name: VPM_01 - merge array into array (read key)
+- name: Write - VPM_01 - merge array into array (read key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_01
   register: VPM_01_2
 
-- name: VPM_01 - merge array into array (assert)
+- name: Write - VPM_01 - merge array into array (assert)
   assert:
     that:
       - "not VPM_01_1.changed"
@@ -168,18 +168,18 @@
 
 #-------------
 
-- name: VPM_02 - merge dict into dict (create key)
+- name: Write - VPM_02 - merge dict into dict (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_02
     value:
       key1: val1
       key2: val2
       key3: ['index0']
 
-- name: VPM_02 - merge dict into dict (merge key)
+- name: Write - VPM_02 - merge dict into dict (merge key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_02
     state: merge
     value:
@@ -187,9 +187,9 @@
       key3: ['index0', 'index1']
       key4: val4
 
-- name: VPM_02 - merge dict into dict (merge key idempotence)
+- name: Write - VPM_02 - merge dict into dict (merge key idempotence)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_02
     state: merge
     value:
@@ -198,13 +198,13 @@
       key4: val4
   register: VPM_02_1
 
-- name: VPM_02 - merge dict into dict (read key)
+- name: Write - VPM_02 - merge dict into dict (read key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_02
   register: VPM_02_2
 
-- name: VPM_02 - merge dict into dict (assert)
+- name: Write - VPM_02 - merge dict into dict (assert)
   assert:
     that:
       - "not VPM_02_1.changed"
@@ -212,34 +212,34 @@
 
 #-------------
 
-- name: VPM_03 - merge item into array (create key)
+- name: Write - VPM_03 - merge item into array (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_03
     value: ['val1']
 
-- name: VPM_03 - merge item into array (merge key)
+- name: Write - VPM_03 - merge item into array (merge key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_03
     state: merge
     value: val2
 
-- name: VPM_03 - merge item into array (merge key idempotence)
+- name: Write - VPM_03 - merge item into array (merge key idempotence)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_03
     state: merge
     value: val2
   register: VPM_03_1
 
-- name: VPM_03 - merge item into array (read key)
+- name: Write - VPM_03 - merge item into array (read key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPM_03
   register: VPM_03_2
 
-- name: VPM_03 - merge item into array (assert)
+- name: Write - VPM_03 - merge item into array (assert)
   assert:
     that:
       - "not VPM_03_1.changed"
@@ -249,35 +249,35 @@
 # TESTS: value present, state=replace
 #
 
-- name: VPR_01 - replace key (create key)
+- name: Write - VPR_01 - replace key (create key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPR_01
     value:
       key1: val1
 
-- name: VPR_01 - replace key (replace key)
+- name: Write - VPR_01 - replace key (replace key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPR_01
     value:
       key1new: val1
 
-- name: VPR_01 - replace key (replace key idempotence)
+- name: Write - VPR_01 - replace key (replace key idempotence)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPR_01
     value:
       key1new: val1
   register: VPR_01_1
 
-- name: VPR_01 - replace key (read key)
+- name: Write - VPR_01 - replace key (read key)
   macos_pref:
-    domain: com.ansible.test
+    domain: '{{ domain }}'
     key: VPR_01
   register: VPR_01_2
 
-- name: VPR_01 - replace key (assert)
+- name: Write - VPR_01 - replace key (assert)
   assert:
     that:
       - "not VPR_01_1.changed"
