fixes links and YAML

--- a/docs/docsite/rst/network/getting_started/sample_files/first_playbook.yml
+++ b/docs/docsite/rst/network/getting_started/sample_files/first_playbook.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Network Getting Started: First Playbook
+- name: Network Getting Started First Playbook
   connection: network_cli
   hosts: all
   tasks:
