--- a/test/integration/targets/yum_repository/tasks/yum_repository_centos.yml
+++ b/test/integration/targets/yum_repository/tasks/yum_repository_centos.yml
@@ -189,6 +189,7 @@
     description: EPEL yum repo
     baseurl: https://download.fedoraproject.org/pub/epel/{{ ansible_distribution_major_version }}/{{ ansible_architecture }}/
     state: present
+    gpgcheck: no
 
 - set_fact:
     repofile: "{{ lookup('file', '/etc/yum.repos.d/epel.repo') }}"
