reformat multiline bugfix entries

--- a/changelogs/config.yaml
+++ b/changelogs/config.yaml
@@ -8,5 +8,11 @@ sections:
 - ['minor_changes', 'Minor Changes']
 - ['deprecated_features', 'Deprecated Features']
 - ['removed_features', 'Removed Features (previously deprecated)']
+- ['new_lookup_plugins', 'New Lookup Plugins']
+- ['new_callback_plugins', 'New Callback Plugins']
+- ['new_connection_plugins', 'New Connection Plugins']
+- ['new_test_plugins', 'New Test Plugins']
+- ['new_filter_plugins', 'New Filter Plugins']
+- ['new_modules', 'New Modules']
 - ['bugfixes', 'Bugfixes']
 - ['known_issues', 'Known Issues']
