--- a/changelogs/fragments/interfaces_file_args_fix.yaml
+++ b/changelogs/fragments/interfaces_file_args_fix.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  interface_file - accept interfaces without address family or method (https://github.com/ansible/ansible/pull/34200)
+- interface_file - accept interfaces without address family or method (https://github.com/ansible/ansible/pull/34200)
