--- a/changelogs/fragments/lineinfile_insert_fix.yaml
+++ b/changelogs/fragments/lineinfile_insert_fix.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  lineinfile - fix insertion if pattern already exists (https://github.com/ansible/ansible/pull/33393)
+- lineinfile - fix insertion if pattern already exists (https://github.com/ansible/ansible/pull/33393)
