--- a/changelogs/fragments/win_domain_controller_readonlyreplica_fix.yaml
+++ b/changelogs/fragments/win_domain_controller_readonlyreplica_fix.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  win_domain_controller - only specify ReadOnlyReplica when necessary (https://github.com/ansible/ansible/pull/36017)
+- win_domain_controller - only specify ReadOnlyReplica when necessary (https://github.com/ansible/ansible/pull/36017)
