--- a/changelogs/fragments/win_update_string_names_fix.yaml
+++ b/changelogs/fragments/win_update_string_names_fix.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  win_updates - fix regresion with string category names(https://github.com/ansible/ansible/pull/36015)
+- win_updates - fix regresion with string category names(https://github.com/ansible/ansible/pull/36015)
