--- a/changelogs/fragments/azure_api_profiles.yaml
+++ b/changelogs/fragments/azure_api_profiles.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  azure_rm modules - internal changes to use API profiles and kwargs for future Azure Stack support and better stability between SDK updates. (https://github.com/ansible/ansible/pull/35538)
+- azure_rm modules - internal changes to use API profiles and kwargs for future Azure Stack support and better stability between SDK updates. (https://github.com/ansible/ansible/pull/35538)
