--- a/changelogs/fragments/block_parenting.yaml
+++ b/changelogs/fragments/block_parenting.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  fix memory bloat on nested includes by preventing blocks from self-parenting (https://github.com/ansible/ansible/pull/36075)
+- fix memory bloat on nested includes by preventing blocks from self-parenting (https://github.com/ansible/ansible/pull/36075)
