--- a/changelogs/fragments/eos_vrf_parsing_fix.yaml
+++ b/changelogs/fragments/eos_vrf_parsing_fix.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  eos_vrf and eos_eapi - fix vrf parsing (https://github.com/ansible/ansible/pull/35791)
+- eos_vrf and eos_eapi - fix vrf parsing (https://github.com/ansible/ansible/pull/35791)
