--- a/changelogs/fragments/nxos_evpn_vni_issues.yaml
+++ b/changelogs/fragments/nxos_evpn_vni_issues.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  nxos_evpn_vni - fixed a number of issues (https://github.com/ansible/ansible/pull/35930)
+- nxos_evpn_vni - fixed a number of issues (https://github.com/ansible/ansible/pull/35930)
