--- a/changelogs/fragments/openshift_client_update.yaml
+++ b/changelogs/fragments/openshift_client_update.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  openshift modules - update to client version 0.4.0 (https://github.com/ansible/ansible/pull/35127)
+- openshift modules - update to client version 0.4.0 (https://github.com/ansible/ansible/pull/35127)
