--- a/changelogs/fragments/vmware_guest_snapshot_root_fix.yaml
+++ b/changelogs/fragments/vmware_guest_snapshot_root_fix.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  vmware_guest_snapshot - always check for root snapshot (https://github.com/ansible/ansible/pull/36001)
+- vmware_guest_snapshot - always check for root snapshot (https://github.com/ansible/ansible/pull/36001)
