--- a/changelogs/fragments/vyos_l3_lo_fix.yaml
+++ b/changelogs/fragments/vyos_l3_lo_fix.yaml
@@ -1,4 +1,3 @@
 bugfixes:
-- |
-  vyos_l3_interface - add support for localhost (https://github.com/ansible/ansible/pull/36141)
+- vyos_l3_interface - add support for localhost (https://github.com/ansible/ansible/pull/36141)
   
