--- a/changelogs/fragments/vyos_check_mode.yaml
+++ b/changelogs/fragments/vyos_check_mode.yaml
@@ -1,2 +1,2 @@
 bugfixes:
-- vyos - fixes to check mode support (https://github.com/ansible/ansible/pull/35977)
+- vyos - added fixes to check mode support (https://github.com/ansible/ansible/pull/35977)
