--- a/changelogs/fragments/nxos_igmp_interface_fix.yaml
+++ b/changelogs/fragments/nxos_igmp_interface_fix.yaml
@@ -1,2 +1,2 @@
 bugfixes:
-- nxos_igmp_interface - fix response handling for different nxos versions (https://github.com/ansible/ansible/pull/35959)
+- nxos_igmp_interface - fixed response handling for different nxos versions (https://github.com/ansible/ansible/pull/35959)
