--- a/changelogs/fragments/nxos_interface_ospf_fix.yaml
+++ b/changelogs/fragments/nxos_interface_ospf_fix.yaml
@@ -1,2 +1,2 @@
 bugfixes:
-- nxos_interface_ospf - various bugfixes (https://github.com/ansible/ansible/pull/35988)
+- nxos_interface_ospf - added various bugfixes (https://github.com/ansible/ansible/pull/35988)
