--- a/changelogs/fragments/display_fix.yaml
+++ b/changelogs/fragments/display_fix.yaml
@@ -1,2 +1,2 @@
 bugfixes:
-- updetd to ensure displayed messages under peristent connections are returned to the controller (https://github.com/ansible/ansible/pull/36064)
+- updated to ensure displayed messages under peristent connections are returned to the controller (https://github.com/ansible/ansible/pull/36064)
