Allow empty parameters for ECS task definition containers
To allow container parameters to be set through a variable
but also not set if the variable is not set, something like
the below is needed:

```
  containers:
    hostname: "{{ var_hostname|default() }}"
```

To avoid

> hostname contains invalid characters, does not
> match pattern `^[a-zA-Z0-9-.]{0,253}[a-zA-Z0-9]$`

remove the `hostname` key from `containers` if it's empty.

Applies to workingDirectory and hostname but could be further extended

--- a/test/integration/targets/ecs_cluster/defaults/main.yml
+++ b/test/integration/targets/ecs_cluster/defaults/main.yml
@@ -22,6 +22,7 @@ ecs_task_containers:
   - containerPort: "{{ ecs_task_container_port }}"
     hostPort: "{{ ecs_task_host_port|default(0) }}"
   mountPoints: "{{ ecs_task_mount_points|default([]) }}"
+  hostname: "{{ ecs_task_hostname|default() }}"
 ecs_service_deployment_configuration:
   minimum_healthy_percent: 0
   maximum_percent: 100
