Fix error option name.

--- a/examples/ansible.cfg
+++ b/examples/ansible.cfg
@@ -285,7 +285,7 @@
 # on the CLI.  If this is True then multiple arguments are merged together.  If
 # it is False, then the last specified argument is used and the others are ignored.
 # This option will be removed in 2.8.
-#merge_multiple_cli_flags = True
+#merge_multiple_cli_tags = True
 
 # Controls showing custom stats at the end, off by default
 #show_custom_stats = True
