Collect enc data in foreman inventory
Fixes #36300

--- a/contrib/inventory/foreman.ini
+++ b/contrib/inventory/foreman.ini
@@ -152,6 +152,9 @@ want_hostcollections = False
 # Disabled by default as the change would else not be backward compatible.
 rich_params = False
 
+# Whether to fetch enc(External node classifier) data from Foreman and store them on the host
+want_enc = False
+
 [cache]
 path = .
 max_age = 60
