--- a/changelogs/fragments/include_role_recursion_and_performance.yaml
+++ b/changelogs/fragments/include_role_recursion_and_performance.yaml
@@ -1,3 +1,2 @@
 bugfixes:
-- |
-  include_role - improved performance and recursion depth (https://github.com/ansible/ansible/pull/36470)
+- include_role - improved performance and recursion depth (https://github.com/ansible/ansible/pull/36470)
