--- a/.github/BOTMETA.yml
+++ b/.github/BOTMETA.yml
@@ -1071,10 +1071,12 @@ files:
     keywords:
     - validate-modules
   docs/:
-    labels: docs_pull_request
+    labels: docs
     notify: dharmabumstead
   docs/docsite/rst/network/:
-    labels: networking
+    labels:
+      - networking
+      - docs
     maintainers:
       - acozine
       - gundalow
