--- a/test/integration/targets/aws_caller_facts/tasks/main.yaml
+++ b/test/integration/targets/aws_caller_facts/tasks/main.yaml
@@ -1,18 +1,14 @@
----
-# ======test caller facts are returned==============
 - name: retrieve caller facts
   aws_caller_facts:
-    region: "{{ ec2_region }}"
-    aws_access_key: "{{ ec2_access_key }}"
-    aws_secret_key: "{{ ec2_secret_key }}"
+    region: "{{ aws_region }}"
+    aws_access_key: "{{ aws_access_key }}"
+    aws_secret_key: "{{ aws_secret_key }}"
     security_token: "{{security_token}}"
   register: result
-- name: assert account present
+
+- name: assert correct keys are returned
   assert:
-    that: result.account is not none
-- name: assert arn present
-  assert:
-    that: result.arn is not none
-- name: assert user_id present
-  assert:
-    that: result.user_id is not none
+    that:
+      - result.account is not none
+      - result.arn is not none
+      - result.user_id is not none
