test ACL with a path that contains spaces

--- a/test/integration/targets/acl/tasks/main.yml
+++ b/test/integration/targets/acl/tasks/main.yml
@@ -33,4 +33,4 @@
     test_user: ansible_user
     test_group: ansible_group
     test_file: /tmp/ansible_file
-    test_dir: /tmp/ansible_dir
+    test_dir: "/tmp/ansible_dir/with some space"
