--- a/test/integration/targets/ezjail/tasks/main.yml
+++ b/test/integration/targets/ezjail/tasks/main.yml
@@ -4,7 +4,7 @@
     msg: '{{ role_path|basename }}'
 
 - name: only freebsd supported
-  when: ansible_system == "FreeBSD"
+  when: ansible_os_family == "FreeBSD"
   block:
     - include_tasks: setup.yml
     - include_tasks: test_jail1.yml
