--- a/changelogs/fragments/network_changes.yaml
+++ b/changelogs/fragments/network_changes.yaml
@@ -1,7 +1,8 @@
 major_changes:
   - |
-    Various changes to Networking
+    Ansible Network improvements
 
     * Created new connection plugins ``network_cli`` and ``netconf`` to replace ``connection=local`` (which will continue to work).
     * No more ``unable to open shell``. A clear and descriptive message will be displayed in ansible-playbook normal output without needing to enable debug mode
-    * Loads of documentation. FIXME LINK
+    * Loads of documentation. `Ansible for Network Automation Documentation <http://docs.ansible.com/ansible/2.5/network/>`_.
+    * 
