--- a/test/integration/targets/ios_command/tests/cli/timeout.yaml
+++ b/test/integration/targets/ios_command/tests/cli/timeout.yaml
@@ -16,4 +16,17 @@
       - "result.failed == true"
       - "result.msg is defined"
 
+
+- name: test command timeout scenario
+  ios_command:
+    commands:
+      - command: 'clear counters GigabitEthernet0/2'
+    provider: "{{ cli }}"
+  register: result
+  ignore_errors: yes
+
+- assert:
+    that:
+      - "result.failed == true"
+
 - debug: msg="END cli/timeout.yaml on connection={{ ansible_connection }}"
