--- a/changelogs/fragments/py3-znode.yaml
+++ b/changelogs/fragments/py3-znode.yaml
@@ -1,4 +1,3 @@
 ---
-fixes:
-  - |
-    Fix a bug calling the zookeeper API under Python3 https://github.com/ansible/ansible/pull/36999
+bugfixes:
+  - znode - fixed a bug calling the zookeeper API under Python3 https://github.com/ansible/ansible/pull/36999
