New release v2.5.0rc2

--- a/changelogs/fragments/v2.5.0rc2_summary.yaml
+++ b/changelogs/fragments/v2.5.0rc2_summary.yaml
@@ -1,4 +1,4 @@
 release_summary: |
-   | Release Date: 2018-02-22
-   | Estimated Final Release: mid-March 2018
+   | Release Date: 2018-03-08
+   | Estimated Final Release: 2018-03-15
    | `Porting Guide <http://docs.ansible.com/ansible/devel/porting_guides.html>`_
