--- a/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
+++ b/test/integration/targets/azure_rm_networkinterface/tasks/main.yml
@@ -146,7 +146,8 @@
 
 - assert:
     that:
-      - output.state.ip_configurations | length == 0
+      - output.state.ip_configurations | length == 1
+      - output.state.ip_configurations[0].public_ip == null
 
 - name: Delete the NIC (check mode)
   azure_rm_networkinterface:
